--- a/main - Copy.html
+++ b/main - Copy.html
@@ -26,17 +26,19 @@
   <!-- particles.js container -->
   <div id="particles-js" class="absolute   top-0 left-0 w-full min-h-screen "></div>
 
-  <!-- Page container-->
   <div class="bg-gray-700 p-4 min-h-screen ">
-    <!-- Top of page -->
-    <div class="max-w-7xl mx-auto px-6 md:px-12 xl:px-6 flex flex-col lg:flex-row items-start lg:items-center">
-      <div class=" p-4 lg:w-2/3 text-gray-100">
+
+    <div class="  max-w-7xl  mx-auto px-6 md:px-12 xl:px-6">
+      <div class=" relative z-10  p-4  xl:w-2/3 lg:w-1/2 mt-12 text-gray-100">
+
+
         <div class="avatar">
           <div class="w-24 rounded-full">
             <img src="https://img.daisyui.com/images/profile/demo/superperson@192.webp" />
           </div>
           <h2 class="my-8 px-6 text-2xl font-bold text-white md:text-4xl">Dr. Iulian Marinescu</h2>
         </div>
+
         <p>
           Dr. in Engineering / Program management/ Product development with 14 years' experience in
           technology development and New Product innovation:
@@ -55,34 +57,16 @@
             Verizon) and SMEs to develop technologies (AI, IoT, Big Data, Robotics, Web Crawlers, LLMs,
             ML) for Supply Chains digitization and transformations.</li>
         </ul>
+
         </p>
+
       </div>
 
-      <!-- Stats -->
-      <div class="stats shadow bg-base-200 text-black dark:text-white lg:ml-auto">
-        <div class="stat">
-          <div class="stat-title">Value</div>
-          <div class="stat-value">5mil</div>
-        </div>
-        <div class="stat">
-          <div class="stat-title">Projects</div>
-          <div class="stat-value">42</div>
-        </div>
-        <div class="stat">
-          <div class="stat-title">Awards</div>
-          <div class="stat-value">3</div>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- Menu -->
-    <div class="max-w-7xl mx-auto px-6 md:px-12 xl:px-6">
-      <div class="mt-10 grid divide-x divide-y divide-gray-700 overflow-hidden  rounded-3xl
-                    border text-gray-600 border-gray-700 sm:grid-cols-2 lg:grid-cols-4  lg:divide-y-0 xl:grid-cols-4">
+      <div class="mt-16 grid divide-x divide-y  divide-gray-700 overflow-hidden  rounded-3xl
+                   border text-gray-600 border-gray-700 sm:grid-cols-2 lg:grid-cols-4  lg:divide-y-0 xl:grid-cols-4">
         <a href="https://your-link-here.com">
           <div class="group relative bg-base-100 transition hover:z-[1]
-                        hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
+                      hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
             <div class="relative space-y-8 py-12 p-8">
               <img src="https://www.svgrepo.com/show/164986/logo.svg" loading="lazy" width="200" height="200"
                 class="w-12 h-12 rounded-full" style="color:transparent">
@@ -133,30 +117,29 @@
       </div>
     </div>
 
+
     <!----------------- Second Page ----------------- -->
-    <!-- Container -->
+
     <div class="container max-w-7xl mx-auto mt-40 px-6 md:px-12 xl:px-6 grid grid-cols-1 md:grid-cols-2 gap-6">
-      
-      <!-- Left Column: Cards -->
+      <!-- First Column: 5 Cards -->
       <div class="space-y-6">
-        <!-- Companies worked with: -->
+
         <div class="card bg-base-100 shadow-xl p-6  bg-base-100 card-md">
-          
           <h2 class="card-title">Companies Worked with:</h2>
           <div class="grid grid-cols-4  gap-1">
             <!-- Microsoft -->
+
             <div class="tooltip tooltip-bottom"
               data-tip="Project: Logistics Livng Lab (L3)-project - Last mile logistics">
               <div class="p-4 place-items-center text-sm grayscale contrast-200 brightness-50
-                             hover:grayscale-0 hover:bg-base-300 hover:contrast-100 hover:brightness-100">
-                <img class="dark:brightness-200 dark:contrast-[300]" src="images/microsoft-logo-svgrepo-com.svg" >
+                             hover:grayscale-0 hover:bg-neutral-content hover:contrast-100 hover:brightness-100">
+                <img src="images/microsoft-logo-svgrepo-com.svg">
               </div>
             </div>
             <!-- Rolls -->
-            <div class="tooltip  tooltip-bottom"
-              data-tip="Employee: 12 Years - Repair Technology , Combustion and Casings, CA Innovation and Technology">
+            <div class="tooltip  tooltip-bottom" data-tip="Employee: 12 Years - Repair Technology , Combustion and Casings, CA Innovation and Technology">
               <div class="p-4 place-items-center text-sm  grayscale
-             hover:bg-base-300 hover:grayscale-0">
+             hover:bg-neutral-content hover:grayscale-0">
                 <img src="images/Rolls_royce_holdings_logo_color.svg" height="70px" width="40px">
                 Aero
               </div>
@@ -164,7 +147,7 @@
             <!-- Rolls Nucelar-->
             <div class="tooltip tooltip-bottom" data-tip="Digital Supply Chains Hub">
               <div class="p-4 place-items-center text-sm grayscale 
-               hover:bg-base-300 hover:grayscale-0">
+               hover:bg-neutral-content hover:grayscale-0">
                 <img src="images/Rolls_royce_holdings_logo_color.svg" height="70px" width="40px">
                 Nuclear
               </div>
@@ -172,65 +155,79 @@
 
             <!-- Leonardo  -->
             <div class="tooltip  tooltip-bottom" data-tip="Project: Data analysis tool in python">
-              <div class="py-10 place-items-center text-sm grayscale
-             hover:bg-base-300 hover:grayscale-0">
-                <img class="dark:brightness-200 dark:contrast-[300]" src="images/LDO_Logo_Leonardo.svg">
+              <div class="py-10 place-items-center text-sm  grayscale
+             hover:bg-neutral-content hover:grayscale-0">
+                <img src="images/LDO_Logo_Leonardo.svg" >
                 Electronics
               </div>
             </div>
             <!-- BAE Systems-->
             <div
-              class="grayscale hover:grayscale-0 p-4 place-items-center tooltip text-sm tooltip-bottom hover:bg-base-300"
+              class="grayscale hover:grayscale-0 p-4 place-items-center tooltip text-sm tooltip-bottom hover:bg-neutral-content"
               data-tip="Materials developement project - Ni Superalloys part of SAMULET programme">
               <img class="" src="logo_baesystems_borderless.svg">
             </div>
 
-            <div class="p-4 hover:bg-base-300">7</div>
-            <div class="p-4 hover:bg-base-300">8</div>
-            <div class="p-4 hover:bg-base-300">9</div>
+            <div class="p-4 hover:bg-neutral-content">7</div>
+            <div class="p-4 hover:bg-neutral-content">8</div>
+            <div class="p-4 hover:bg-neutral-content">9</div>
 
             <!-- Virgin Media O2 -->
-            <div class="p-4 hover:bg-base-300">
+            <div class="p-4 hover:bg-neutral-content">
               <img src="Virgin_Media_O2.svg" height="50">
             </div>
             <!-- Verizon -->
-            <div class="p-4 hover:bg-base-300">
+            <div class="p-4 hover:bg-neutral-content">
               <img src="Verizon_2015_logo_-vector.svg" height="40">
             </div>
             <!-- Nottingham -->
-            <div class="p-4 hover:bg-base-300">
+            <div class="p-4 hover:bg-neutral-content">
               <img src="the-university-of-nottingham.svg">
             </div>
             <!-- MTC -->
-            <div class="p-4 hover:bg-base-300">
+            <div class="p-4 hover:bg-neutral-content">
               <img src="mtc-logo.svg">
             </div>
             <!-- HVMC -->
-            <div class="p-4 hover:bg-base-300">
+            <div class="p-4 hover:bg-neutral-content">
               <img src="HVMC.svg">
             </div>
             <!-- UKRI -->
-            <div class="p-4 hover:bg-base-300">
+            <div class="p-4 hover:bg-neutral-content">
               <img src="UKRI.svg" height="60px" width="120px">
             </div>
             <!-- SAESL-->
             <div class="tooltip  tooltip-bottom"
               data-tip="Repair-Tech : Developing products for MRO repair, Localised Heat Treatement, Cold Spray, ect..">
               <div
-                class="p-4 flex items-center justify-center text-sm grayscale hover:grayscale-0  hover:bg-base-300">
+                class="p-4 flex items-center justify-center text-sm grayscale hover:grayscale-0  hover:bg-neutral-content">
                 <img src="images/saesl-logo@1x.png">
               </div>
             </div>
-            <div class="p-4 hover:bg-base-300">20</div>
-            <div class="p-4 hover:bg-base-300">21</div>
-            <div class="p-4 hover:bg-base-300">22</div>
-            <div class="p-4 hover:bg-base-300">23</div>
-            <div class="p-4 hover:bg-base-300">24</div>
+
+
+            <div class="p-4 hover:bg-neutral-content">20</div>
+            <div class="p-4 hover:bg-neutral-content">21</div>
+            <div class="p-4 hover:bg-neutral-content">22</div>
+            <div class="p-4 hover:bg-neutral-content">23</div>
+            <div class="p-4 hover:bg-neutral-content">24</div>
+
           </div>
+
+
+
+
+
+
+
+
+
+
+
         </div>
 
-        <!-- Project Cards -->
-        <div class="card indicator bg-base-100 w-96 shadow-xl p-6 hover:bg-base-300">
+
+        <div class="card indicator bg-base-100 w-96 shadow-xl p-6 hover:bg-neutral-content">
           <span class=" indicator-item badge badge-secondary">
             <svg width="17px" height="17px" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -249,7 +246,6 @@
             supplier onboarding data</p>
         </div>
 
-        <!-- Blog Cards -->
         <div class="indicator">
           <span class="indicator-item badge ">
             <svg class="" width="20px" height="20px" viewBox="0 0 512 512" version="1.1"
@@ -273,9 +269,7 @@
           </div>
         </div>
 
-
-        <!-- Full leght simple card 1 -->
-        <div class="card bg-base-100 shadow-xl p-6  bg-base-100 card-md hover:bg-base-300">
+        <div class="card bg-base-100 shadow-xl p-6  bg-base-100 card-md hover:bg-neutral-content">
           <h2 class="card-title">Card 1</h2>
           <p>Content for the first card.</p>
           <div class="justify-end card-actions">
@@ -283,7 +277,7 @@
           </div>
         </div>
 
-        <!-- Full leght simple card 2  -->
+        <!-- For Projects -->
         <div class="card bg-base-100 shadow-xl p-6 hover:bg-[url('')] hover:bg-cover hover:bg-center ">
           <h2 class="card-title">Card 5</h2>
           <p>Content for the fifth card. <br><br><br><br>
@@ -291,7 +285,7 @@
         </div>
       </div>
 
-      <!-- Right Column : Timeline -->
+      <!-- Second Column: 1 Larger Card -->
       <div class="card bg-base-100 shadow-xl p-6 h-full">
         <h2 class="card-title">Main Feature Card</h2>
         <ul class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical">
@@ -392,10 +386,9 @@
         </ul>
       </div>
     </div>
+
+
   </div>
-
-
-
   <footer class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center p-4">
     <aside class="grid-flow-col items-center">
       <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
