--- a/test.html
+++ b/test.html
@@ -94,3 +94,25 @@
                       L277.2,78.6z"/>
                   </g>
                   </svg>
+
+
+
+         <p>
+          Dr. in Engineering / Program management/ Product development with 14 years' experience in
+          technology development and New Product innovation:
+          <br>Manufacturing:
+        <ul>
+          <li>- Additive manufacturing for metals: Select Laser Melting (SLM), Cold Spray (CS), Direct Laser
+            Deposition (DLD) or Laser Powder Deposition (LPD) </li>
+          <li>- 3D Scanning, GOM, Structured light inspection</li>
+          <li>- Global Lead for Cold Spray additive techniques, setting strategy and trends for Rolls-Royce </li>
+          <li>- Localized Heat Treatment (LHT): heat treatment of materials for desired proprieties, locally</li>
+          <li>- Materials: Inconel 718, TI64, TI6246, AL 2024 and other mainly Aerospace alloys(superalloys) </li>
+        </ul>
+        Digital Programme Management:
+        <ul>
+          <li>- Digital Supply Chains Open calls: Working with Big Tech (Microsoft, Apple, Vodafone,
+            Verizon) and SMEs to develop technologies (AI, IoT, Big Data, Robotics, Web Crawlers, LLMs,
+            ML) for Supply Chains digitization and transformations.</li>
+        </ul>
+        </p>
