--- a/main.html
+++ b/main.html
@@ -79,11 +79,12 @@
     <!-- Menu -->
     <div class="max-w-7xl mx-auto px-6 md:px-12 xl:px-6">
       <div class="mt-10 grid divide-x divide-y divide-gray-700 overflow-hidden  rounded-3xl
-                    border text-gray-600 border-gray-700 sm:grid-cols-2 lg:grid-cols-4  lg:divide-y-0 xl:grid-cols-4">
+                    border border-gray-700 sm:grid-cols-2 lg:grid-cols-4  lg:divide-y-0 xl:grid-cols-4">
+        
         <a href="https://your-link-here.com">
           <div class="group relative bg-base-100 transition hover:z-[1]
                         hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
-            <div class="relative space-y-8 py-12 p-8">
+            <div class="relative space-y-8 py-6 p-8">
               <img src="https://www.svgrepo.com/show/164986/logo.svg" loading="lazy" width="200" height="200"
                 class="w-12 h-12 rounded-full" style="color:transparent">
               <div class="space-y-2">
@@ -97,8 +98,9 @@
         </a>
 
         <div
-          class="group relative bg-base-100 transition hover:z-[1] hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
-          <div class="relative space-y-8 py-12 p-8">
+          class="group relative bg-base-100 transition hover:z-[1]
+                 hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
+          <div class="relative space-y-8 py-6 p-8">
             <img src="https://www.svgrepo.com/show/120853/logo.svg" loading="lazy" width="200" height="200"
               class="w-12 h-12 rounded-full" style="color:transparent">
             <div class="space-y-2">
@@ -110,7 +112,7 @@
         </div>
         <div
           class="group relative bg-base-100 transition hover:z-[1] hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
-          <div class="relative space-y-8 py-12 p-8">
+          <div class="relative space-y-8 py-6 p-8">
             <img src="https://www.svgrepo.com/show/120852/logo.svg" loading="lazy" width="200" height="200"
               class="w-12 h-12 rounded-full" style="color:transparent">
             <div class="space-y-2">
@@ -121,7 +123,7 @@
         </div>
         <div
           class="group relative bg-base-100 transition hover:z-[1] hover:shadow-2xl hover:shadow-white-600/10 hover:scale-110">
-          <div class="relative space-y-8 py-12 p-8">
+          <div class="relative space-y-8 py-6 p-8">
             <img src="https://www.svgrepo.com/show/120850/logo.svg" loading="lazy" width="200" height="200"
               class="w-12 h-12 rounded-full" style="color:transparent">
             <div class="space-y-2">
@@ -135,7 +137,7 @@
 
     <!----------------- Second Page ----------------- -->
     <!-- Container -->
-    <div class="container max-w-7xl mx-auto mt-40 px-6 md:px-12 xl:px-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div class="container max-w-7xl mx-auto mt-20 px-6 md:px-12 xl:px-6 grid grid-cols-1 md:grid-cols-2 gap-6">
       
       <!-- Left Column: Cards -->
       <div class="space-y-6">
@@ -172,7 +174,7 @@
 
             <!-- Leonardo  -->
             <div class="tooltip  tooltip-bottom" data-tip="Project: Data analysis tool in python">
-              <div class="py-10 place-items-center text-sm grayscale
+              <div class="py-10 place-items-center text-sm  grayscale
              hover:bg-base-300 hover:grayscale-0">
                 <img class="dark:brightness-200 dark:contrast-[300]" src="images/LDO_Logo_Leonardo.svg">
                 Electronics
