--- a/main.html
+++ b/main.html
@@ -349,8 +349,6 @@
         </div>
       </div>
 
-
-
       <!-- Right Column : Timeline -->
       <div class="card bg-base-100 shadow-xl p-6 h-full" id="timeline_cv">
         <h2 class="card-title">Experience: </h2>
@@ -366,14 +364,13 @@
             <div class="timeline-start mb-10 md:text-end">
               <time class="font-mono italic">Nov 2020 - Current</time>
               <div class="text-lg font-black">Digital Catapult - Programme Manager</div>
-              Leading Programme manager for a £4Mil. Open Calls for Digital Supply Chain, working with Microsoft,
+              Leading Programme manager for a £4Mil. Open Calls for Digital Supply Chain Hub, working with Microsoft,
               Rolls-Royce, Zoll, O2 , Vodafone (IoT), Nissan.
-              Providing funding to small companies (Startups /SMEs) to develop digital tech solutions for the sponsors.
+              Providing funding to small companies (Startups /SMEs) to develop digital tech solutions for the industry.
               <br>Impact Monitoring for AI & ML Tecnologies (Deep tech)
               <br><br>Technical: AI , LLMs, HIT-AI , ML for Supply Chains , Interoperability of Data
-              <br>AWS, Azure, Google Cloud technologies, but mainly AWS.
+              <br>Developing new supply chains tools 
               <br>Big Data Analysis
-
             </div>
             <hr />
           </li>
@@ -417,9 +414,8 @@
               <div class="text-lg font-black">Rolls-Royce Hucknall - Manufacturing Engineer</div>
               Leading Innovative Inspection techniques using Image Processing cameras on CMMs for Combustion Chambers
               for RR Trent 900 (for Airbus A380) and RRTrent XWB (84k and 97k Combustion) leading several R&D projects
-              in
-              innovative inspection. Worked with robotic cameras ( REVO Camera) with Renishaw, programming in Modus for
-              fast inspection of combustor holes
+              in innovative inspection. Worked with robotic cameras ( REVO CMM Camera) with Renishaw, programming in Modus for
+              fast inspection of combustor holes and combustor tiles
             </div>
             <hr />
           </li>
